--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     <header class="site-header">
         <div class="container header-inner">
             <div class="brand">
+                <a href="#heroid">
                 <img src="imagenes/logosaavedrapropiedades.png" alt="Saavedra Propiedades" class="logo" />
+                </a>
             </div>
 
             <!-- Botón de menú hamburguesa -->
@@ -59,7 +61,7 @@
     <div id="overlay" class="overlay"></div>
 
 <!-- Hero -->
-<section class="hero">
+<section id="heroid" class="hero">
     <img class="hero-bg" src="imagenes/hero.png" alt="Fachada Saavedra" />
     <div class="hero-overlay"></div>
     <div class="hero-content container">
@@ -96,7 +98,7 @@
         <li>Trámites de escribanía</li>
         </ul>
 
-        <p class="accent">No dudes en consultarnos.</p>
+        <p class="accent-consult">No dudes en consultarnos.</p>
 
         <!-- Imágenes horizontales visibles solo en mobile -->
         <div class="about-images-mobile">
@@ -130,7 +132,7 @@
             <h4>Zonaprop</h4>
             <p>Conocé más</p>
         </div>
-        <button class="arrow-btn" aria-label="Ir a Zonaprop">→</button>
+        <button onclick="window.open('https://www.zonaprop.com.ar/inmobiliarias/saavedra-propiedades_30722891-inmuebles.html', '_blank')" class="arrow-btn" aria-label="Ir a Zonaprop">→</button>
         </div>
     </article>
 
@@ -141,7 +143,7 @@
             <h4>Argenprop</h4>
             <p>Conocé más</p>
         </div>
-        <button class="arrow-btn" aria-label="Ir a Argenprop">→</button>
+        <button onclick="window.open('https://www.argenprop.com/saavedra-propiedades', '_blank')" class="arrow-btn" aria-label="Ir a Argenprop">→</button>
         </div>
     </article>
     </div>
@@ -164,9 +166,9 @@
 
         <p class="small">Charlemos:</p>
             <div class="contact-icons">
-                <a href="https://wa.me/+541129485907"><img src="imagenes/contacto-whatsapp.png" alt="enviar whatsapp"></a>
-                <a href="tel:+541145723201"><img src="imagenes/contacto-telefono.png" alt="llamar al número"></a>
-                <a href="mailto:saavedraprop@hotmail.com"><img src="imagenes/contacto-mail.png" alt="enviar correo"></a>
+                <a href="https://wa.me/+541123485907"><img src="imagenes/contacto-whatsapp.png" alt="enviar whatsapp" class="contact-wa"></a>
+                <a href="tel:+541145723201"><img src="imagenes/contacto-telefono.png" alt="llamar al número" class="contact-tel"></a>
+                <a href="mailto:saavedraprop@hotmail.com"><img src="imagenes/contacto-mail.png" alt="enviar correo" class="contact-mail"></a>
             </div>
     </div>
 
@@ -197,19 +199,19 @@
 
         <div class="footer-columns">
             <div>
-            <h4>Visítanos</h4>
+            <h4>Visitanos</h4>
             <p>Nuñez 6302<br/>1431 - CABA</p>
             </div>
         </div>
         <div class="footer-columns">
             <div>
-            <h4>Contáctanos</h4>
+            <h4>Contactanos</h4>
             <p>
             <a href="tel:+541145723201">
                 <img src="imagenes/icono-telefono-footer.png" alt="Teléfono"> 4572 3201
             </a><br>
 
-            <a href="https://wa.me/+541129485907">
+            <a href="https://wa.me/+541123485907">
                 <img src="imagenes/icono-whats-footer.png" alt="WhatsApp"> 11 2348 5907
             </a><br>
 
@@ -222,7 +224,7 @@
     </div>
 
     <div class="copyright">
-    © 2024 Saavedra Propiedades
+    © 2025 Saavedra Propiedades
     </div>
 </footer>
 
